--- a/css/modernizer.css
+++ b/css/modernizer.css
@@ -100,12 +100,12 @@
 
 /* line 6, ../sass/components/_color-classes.scss */
 .weirdColor {
-  background-color: #5caa47 !important;
+  background-color: #051d52 !important;
 }
 
 /* line 9, ../sass/components/_color-classes.scss */
 .weirdColor-text {
-  color: #5caa47 !important;
+  color: #051d52 !important;
 }
 
 /* line 14, ../sass/components/_color-classes.scss */
@@ -3752,8 +3752,8 @@ td, th {
 }
 /* line 579, ../sass/components/_global.scss */
 .collection .collection-item.active {
-  background-color: #5caa47;
-  color: white;
+  background-color: #051d52;
+  color: #79a0f7;
 }
 /* line 583, ../sass/components/_global.scss */
 .collection .collection-item.active .secondary-content {
@@ -3763,7 +3763,7 @@ td, th {
 .collection a.collection-item {
   display: block;
   transition: .25s;
-  color: #5caa47;
+  color: #051d52;
 }
 /* line 593, ../sass/components/_global.scss */
 .collection a.collection-item:not(.active):hover {
@@ -3787,7 +3787,7 @@ td, th {
 /* line 615, ../sass/components/_global.scss */
 .secondary-content {
   float: right;
-  color: #5caa47;
+  color: #051d52;
 }
 
 /* line 619, ../sass/components/_global.scss */
@@ -3818,7 +3818,7 @@ td, th {
   height: 4px;
   display: block;
   width: 100%;
-  background-color: #d7ecd1;
+  background-color: #316df2;
   border-radius: 2px;
   margin: 0.5rem 0 1rem 0;
   overflow: hidden;
@@ -3829,12 +3829,12 @@ td, th {
   top: 0;
   left: 0;
   bottom: 0;
-  background-color: #5caa47;
+  background-color: #051d52;
   transition: width .3s linear;
 }
 /* line 660, ../sass/components/_global.scss */
 .progress .indeterminate {
-  background-color: #5caa47;
+  background-color: #051d52;
 }
 /* line 662, ../sass/components/_global.scss */
 .progress .indeterminate:before {
@@ -3970,7 +3970,7 @@ span.badge.new {
   font-weight: 300;
   font-size: 0.8rem;
   color: #fff;
-  background-color: #5caa47;
+  background-color: #051d52;
   border-radius: 2px;
 }
 /* line 21, ../sass/components/_badges.scss */
@@ -5743,14 +5743,14 @@ small {
 /* line 59, ../sass/components/_buttons.scss */
 .btn:focus, .btn-large:focus, .btn-small:focus,
 .btn-floating:focus {
-  background-color: #498638;
+  background-color: #020c22;
 }
 
 /* line 65, ../sass/components/_buttons.scss */
 .btn, .btn-large, .btn-small {
   text-decoration: none;
   color: #fff;
-  background-color: #5caa47;
+  background-color: #051d52;
   text-align: center;
   letter-spacing: .5px;
   transition: background-color .2s ease-out;
@@ -5758,7 +5758,7 @@ small {
 }
 /* line 74, ../sass/components/_buttons.scss */
 .btn:hover, .btn-large:hover, .btn-small:hover {
-  background-color: #68b753;
+  background-color: #06266a;
 }
 
 /* line 81, ../sass/components/_buttons.scss */
@@ -5772,7 +5772,7 @@ small {
   height: 40px;
   line-height: 40px;
   padding: 0;
-  background-color: #5caa47;
+  background-color: #051d52;
   border-radius: 50%;
   transition: background-color .3s;
   cursor: pointer;
@@ -5780,7 +5780,7 @@ small {
 }
 /* line 82, ../sass/components/_buttons.scss */
 .btn-floating:hover {
-  background-color: #5caa47;
+  background-color: #051d52;
 }
 /* line 86, ../sass/components/_buttons.scss */
 .btn-floating:before {
@@ -5969,7 +5969,7 @@ button.btn-floating {
   z-index: -1;
   width: 40px;
   height: 40px;
-  background-color: #5caa47;
+  background-color: #051d52;
   border-radius: 50%;
   transform: scale(0);
 }
@@ -6070,7 +6070,7 @@ button.btn-floating {
 /* line 36, ../sass/components/_dropdown.scss */
 .dropdown-content li > a, .dropdown-content li > span {
   font-size: 16px;
-  color: #5caa47;
+  color: #051d52;
   display: block;
   line-height: 22px;
   padding: 14px 16px;
@@ -6548,13 +6548,13 @@ button.btn-floating {
 
 /* line 2, ../sass/components/forms/_forms.scss */
 select:focus {
-  outline: 1px solid #edf6ea;
+  outline: 1px solid #5285f4;
 }
 
 /* line 6, ../sass/components/forms/_forms.scss */
 button:focus {
   outline: none;
-  background-color: #65b650;
+  background-color: #062465;
 }
 
 /* line 11, ../sass/components/forms/_forms.scss */
@@ -6671,8 +6671,8 @@ input[type=tel]:not(.browser-default):focus:not([readonly]),
 input[type=number]:not(.browser-default):focus:not([readonly]),
 input[type=search]:not(.browser-default):focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-bottom: 1px solid #5caa47;
-  box-shadow: 0 1px 0 0 #5caa47;
+  border-bottom: 1px solid #051d52;
+  box-shadow: 0 1px 0 0 #051d52;
 }
 /* line 61, ../sass/components/forms/_input-fields.scss */
 input:not([type]):focus:not([readonly]) + label,
@@ -6688,7 +6688,7 @@ input[type=tel]:not(.browser-default):focus:not([readonly]) + label,
 input[type=number]:not(.browser-default):focus:not([readonly]) + label,
 input[type=search]:not(.browser-default):focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
-  color: #5caa47;
+  color: #051d52;
 }
 /* line 84, ../sass/components/forms/_input-fields.scss */
 input:not([type]):focus.valid ~ label,
@@ -7012,7 +7012,7 @@ textarea.materialize-textarea + label:after, .select-wrapper + label:after {
 }
 /* line 225, ../sass/components/forms/_input-fields.scss */
 .input-field .prefix.active {
-  color: #5caa47;
+  color: #051d52;
 }
 /* line 228, ../sass/components/forms/_input-fields.scss */
 .input-field .prefix ~ input,
@@ -7207,13 +7207,13 @@ textarea.materialize-textarea {
 [type="radio"]:checked + span:after,
 [type="radio"].with-gap:checked + span:before,
 [type="radio"].with-gap:checked + span:after {
-  border: 2px solid #5caa47;
+  border: 2px solid #051d52;
 }
 
 /* line 68, ../sass/components/forms/_radio-buttons.scss */
 [type="radio"]:checked + span:after,
 [type="radio"].with-gap:checked + span:after {
-  background-color: #5caa47;
+  background-color: #051d52;
 }
 
 /* line 73, ../sass/components/forms/_radio-buttons.scss */
@@ -7336,8 +7336,8 @@ textarea.materialize-textarea {
   height: 22px;
   border-top: 2px solid transparent;
   border-left: 2px solid transparent;
-  border-right: 2px solid #5caa47;
-  border-bottom: 2px solid #5caa47;
+  border-right: 2px solid #051d52;
+  border-bottom: 2px solid #051d52;
   transform: rotate(40deg);
   backface-visibility: hidden;
   transform-origin: 100% 100%;
@@ -7357,7 +7357,7 @@ textarea.materialize-textarea {
   height: 22px;
   border-top: none;
   border-left: none;
-  border-right: 2px solid #5caa47;
+  border-right: 2px solid #051d52;
   border-bottom: none;
   transform: rotate(90deg);
   backface-visibility: hidden;
@@ -7420,8 +7420,8 @@ textarea.materialize-textarea {
   top: 0;
   width: 20px;
   height: 20px;
-  border: 2px solid #5caa47;
-  background-color: #5caa47;
+  border: 2px solid #051d52;
+  background-color: #051d52;
   z-index: 0;
 }
 /* line 169, ../sass/components/forms/_checkboxes.scss */
@@ -7433,8 +7433,8 @@ textarea.materialize-textarea {
 /* line 175, ../sass/components/forms/_checkboxes.scss */
 [type="checkbox"].filled-in.tabbed:checked:focus + span:not(.lever):after {
   border-radius: 2px;
-  background-color: #5caa47;
-  border-color: #5caa47;
+  background-color: #051d52;
+  border-color: #051d52;
 }
 /* line 182, ../sass/components/forms/_checkboxes.scss */
 [type="checkbox"].filled-in:disabled:not(:checked) + span:not(.lever):before {
@@ -7478,7 +7478,7 @@ textarea.materialize-textarea {
 }
 /* line 19, ../sass/components/forms/_switches.scss */
 .switch label input[type=checkbox]:checked + .lever {
-  background-color: #b2c4ad;
+  background-color: #2752af;
 }
 /* line 22, ../sass/components/forms/_switches.scss */
 .switch label input[type=checkbox]:checked + .lever:before, .switch label input[type=checkbox]:checked + .lever:after {
@@ -7486,7 +7486,7 @@ textarea.materialize-textarea {
 }
 /* line 26, ../sass/components/forms/_switches.scss */
 .switch label input[type=checkbox]:checked + .lever:after {
-  background-color: #5caa47;
+  background-color: #051d52;
 }
 
 /* line 32, ../sass/components/forms/_switches.scss */
@@ -7517,7 +7517,7 @@ textarea.materialize-textarea {
 }
 /* line 57, ../sass/components/forms/_switches.scss */
 .switch label .lever:before {
-  background-color: rgba(92, 170, 71, 0.15);
+  background-color: rgba(5, 29, 82, 0.15);
 }
 /* line 61, ../sass/components/forms/_switches.scss */
 .switch label .lever:after {
@@ -7529,7 +7529,7 @@ textarea.materialize-textarea {
 input[type=checkbox]:checked:not(:disabled) ~ .lever:active::before,
 input[type=checkbox]:checked:not(:disabled).tabbed:focus ~ .lever::before {
   transform: scale(2.4);
-  background-color: rgba(92, 170, 71, 0.15);
+  background-color: rgba(5, 29, 82, 0.15);
 }
 
 /* line 74, ../sass/components/forms/_switches.scss */
@@ -7607,7 +7607,7 @@ select {
 }
 /* line 60, ../sass/components/forms/_select.scss */
 .select-wrapper input.select-dropdown:focus {
-  border-bottom: 1px solid #5caa47;
+  border-bottom: 1px solid #051d52;
 }
 /* line 80, ../sass/components/forms/_select.scss */
 .select-wrapper .caret {
@@ -7792,7 +7792,7 @@ input[type=range] + .thumb {
   height: 0;
   width: 0;
   border-radius: 50%;
-  background-color: #5caa47;
+  background-color: #051d52;
   margin-left: 7px;
   transform-origin: 50% 50%;
   transform: rotate(-45deg);
@@ -7802,7 +7802,7 @@ input[type=range] + .thumb .value {
   display: block;
   width: 30px;
   text-align: center;
-  color: #5caa47;
+  color: #051d52;
   font-size: 0;
   transform: rotate(45deg);
 }
@@ -7836,17 +7836,17 @@ input[type=range]::-webkit-slider-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #5caa47;
+  background: #051d52;
   transition: box-shadow .3s;
   -webkit-appearance: none;
-  background-color: #5caa47;
+  background-color: #051d52;
   transform-origin: 50% 50%;
   margin: -5px 0 0 0;
 }
 
 /* line 97, ../sass/components/forms/_range.scss */
 input[type=range].focused:focus:not(.active)::-webkit-slider-thumb {
-  box-shadow: 0 0 0 10px rgba(92, 170, 71, 0.26);
+  box-shadow: 0 0 0 10px rgba(5, 29, 82, 0.26);
 }
 
 /* line 102, ../sass/components/forms/_range.scss */
@@ -7874,7 +7874,7 @@ input[type=range]::-moz-range-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #5caa47;
+  background: #051d52;
   transition: box-shadow .3s;
   margin-top: -5px;
 }
@@ -7887,7 +7887,7 @@ input[type=range]:-moz-focusring {
 
 /* line 128, ../sass/components/forms/_range.scss */
 input[type=range].focused:focus:not(.active)::-moz-range-thumb {
-  box-shadow: 0 0 0 10px rgba(92, 170, 71, 0.26);
+  box-shadow: 0 0 0 10px rgba(5, 29, 82, 0.26);
 }
 
 /* line 133, ../sass/components/forms/_range.scss */
@@ -7916,13 +7916,13 @@ input[type=range]::-ms-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #5caa47;
+  background: #051d52;
   transition: box-shadow .3s;
 }
 
 /* line 159, ../sass/components/forms/_range.scss */
 input[type=range].focused:focus:not(.active)::-ms-thumb {
-  box-shadow: 0 0 0 10px rgba(92, 170, 71, 0.26);
+  box-shadow: 0 0 0 10px rgba(5, 29, 82, 0.26);
 }
 
 /* line 1, ../sass/components/_tapTarget.scss */
@@ -8121,7 +8121,7 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
 /* line 57, ../sass/components/_datepicker.scss */
 .datepicker-date-display {
   flex: 1 auto;
-  background-color: #5caa47;
+  background-color: #051d52;
   color: #fff;
   padding: 20px 22px;
   font-weight: 500;
@@ -8178,11 +8178,11 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
 }
 /* line 109, ../sass/components/_datepicker.scss */
 .datepicker-table td.is-today {
-  color: #5caa47;
+  color: #051d52;
 }
 /* line 113, ../sass/components/_datepicker.scss */
 .datepicker-table td.is-selected {
-  background-color: #5caa47;
+  background-color: #051d52;
   color: #fff;
 }
 /* line 118, ../sass/components/_datepicker.scss */
@@ -8205,7 +8205,7 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
 }
 /* line 130, ../sass/components/_datepicker.scss */
 .datepicker-day-button:focus {
-  background-color: rgba(95, 164, 77, 0.25);
+  background-color: rgba(7, 30, 80, 0.25);
 }
 
 /* Footer */
@@ -8223,7 +8223,7 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
 .datepicker-clear,
 .datepicker-today,
 .datepicker-done {
-  color: #5caa47;
+  color: #051d52;
   padding: 0 1rem;
 }
 
@@ -8279,7 +8279,7 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
 /* line 19, ../sass/components/_timepicker.scss */
 .timepicker-digital-display {
   flex: 1 auto;
-  background-color: #5caa47;
+  background-color: #051d52;
   padding: 10px;
   font-weight: 300;
 }
@@ -8372,7 +8372,7 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
 /* line 101, ../sass/components/_timepicker.scss */
 .timepicker-tick.active,
 .timepicker-tick:hover {
-  background-color: rgba(92, 170, 71, 0.25);
+  background-color: rgba(5, 29, 82, 0.25);
 }
 
 /* line 105, ../sass/components/_timepicker.scss */
@@ -8399,7 +8399,7 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
 }
 /* line 122, ../sass/components/_timepicker.scss */
 .timepicker-canvas line {
-  stroke: #5caa47;
+  stroke: #051d52;
   stroke-width: 4;
   stroke-linecap: round;
 }
@@ -8412,13 +8412,13 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
 /* line 131, ../sass/components/_timepicker.scss */
 .timepicker-canvas-bearing {
   stroke: none;
-  fill: #5caa47;
+  fill: #051d52;
 }
 
 /* line 135, ../sass/components/_timepicker.scss */
 .timepicker-canvas-bg {
   stroke: none;
-  fill: #5caa47;
+  fill: #051d52;
 }
 
 /* Footer */
@@ -8437,7 +8437,7 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
 
 /* line 153, ../sass/components/_timepicker.scss */
 .timepicker-close {
-  color: #5caa47;
+  color: #051d52;
 }
 
 /* line 157, ../sass/components/_timepicker.scss */
